# tictoc

./: CMakeLists.txt  LICENSE  README  README.md  chan.c  common.c  common.h  fifo.c  fifo.h  index.html  params.json  tictoc.h  types.h
src/: tictoc.c  tictoc.h  timestream.c  timestream.h
test/: CMakeLists.txt  alltests.cc  tictoc.cc
tests/: common.c  timer.c
